# watercooler

./: .gitignore  README.md  pyproject.toml
src/watercooler/: cli.py
src/watercooler/classes/: formatting.py  platforms.py  tasker.py
src/watercooler/config/: helpers.py  models.py  routes.py
src/watercooler/formatting/: helpers.py
src/watercooler/history/: database.py
src/watercooler/tasker/: feed_mode.py  helpers.py  single_mode.py
